Bugfixes and port changed - Changed local port to 10007 - Fixed privacy warning hiding on mobile devices

--- a/static/ip-responsive.css
+++ b/static/ip-responsive.css
@@ -127,9 +127,14 @@
   }
   
   .privacy-warning-notice {
+    bottom: 1rem;
     padding: 1.2rem;
     max-width: 95%;
     border-radius: var(--radius-1);
+  }
+  
+  .privacy-warning-notice.visible {
+    display: block;
   }
   
   .notice-content {
@@ -198,6 +203,10 @@
     padding: 1rem;
   }
   
+  .privacy-warning-notice.visible {
+    display: block;
+  }
+  
   .notice-text {
     font-size: 0.85rem;
   }
@@ -205,5 +214,16 @@
   .notice-accept {
     padding: 0.6rem;
     font-size: 0.9rem;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+  }
+  
+  body {
+    padding-bottom: 120px;
   }
 }
